--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,7 +32,7 @@
         </activity>
 
         <activity
-            android:name=".CustomCameraActivity"
+            android:name=".takepic.CustomCameraActivity"
             android:screenOrientation="landscape"
             android:theme="@style/defaultActivityStyle" />
 
